@@ -20,12 +20,9 @@ jobs:
         run: ./setup.py sdist
 
       - name: Create GitHub release
-        uses: docker://antonyurchenko/git-release:latest
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          CHANGELOG_FILE: "NEWS"
+        uses: cockpit-project/action-release@62db9d9850a1adec300500d84035c4f523fd5290
         with:
-          args: dist/python-dbusmock-*.tar.gz
+          filename: "python-dbusmock-${{ github.ref_name }}.tar.xz"
 
       - name: Create PyPy release
         uses: pypa/gh-action-pypi-publish@master
