@@ -22,6 +22,8 @@ jobs:
     steps:
       - name: Clone repository
         uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
 
       - name: Run unit tests
         run: |
