@@ -1,33 +1,0 @@
-#!/bin/sh
-set -e
-
-# This script does all the steps necessary for doing a new upstream release. It
-# should solely be used by upstream developers, distributors do not need to
-# worry about it.
-
-[ -z "`git status -s`" ] || {
-    echo "Uncommitted changes, aborting" >&2
-    exit 1
-}
-
-git clean -fdx
-
-# update version in NEWS
-version=$(sed -rn '1 { s/^.*\[([0-9.]+)\].*/\1/; p }' NEWS)
-[ -n "$version" ] || {
-    echo "failed to parse version" >&2
-    exit 1
-}
-sed -i "s/UNRELEASED/$(date '+%Y-%m-%d')/" NEWS
-
-# update version in package
-sed -i -r "s/__version__ = '[0-9.]*'/__version__ = '${version}'/" dbusmock/__init__.py
-
-# commit release and tag
-git add NEWS dbusmock/__init__.py
-git commit -m "release $version"
-changes=$(sed -n '/^$/ q; /^- / p' NEWS)
-printf "$version\n\n$changes\n" | git tag -s -F- $version
-
-git push
-git push --tags
