@@ -1,3 +1,5 @@
+OBSOLETE: Release news of newer versions are contained in the git tag descriptions.
+
 ## [0.27.5] - 2022-04-05
 - bluez and accountsservice templates: Drop default arguments from D-Bus methods (thanks Simon McVittie)
 
